# erp_simfony

./: .env.example  .gitignore  Cargo.toml  README.md  blueprint.md  code.md
certs/: cert.pem
src/: auth.rs  config.rs  errors.rs  main.rs  security.rs
static/: main.js  style.css
tempates/: login.html
templates/: blueprint.md  dashboard.html  index.html  index.html.tera  landing.html  login.html
tests/: main_tests.rs
