[package]
name = "composable-enterprise-final"
version = "0.5.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2"

# Security & Config Dependencies
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web-rustls = "0.2"
rustls = "0.22"
rustls-pemfile = "2.1"
actix-governor = "0.6"
rand = "0.8"
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"

# Logging
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
cargo-audit = "0.19"