[package]
name = "simfony"
version = "0.5.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-files = "0.6.6"
tera = "1.19.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
html-escape = "0.2.13"
time = { version = "0.3.36", features = ["serde"] }

# Security & Config Dependencies
actix-session = { version = "0.9.0", features = ["cookie-session"] }
rustls = "0.23.5"
rustls-pemfile = "2.1.2"
actix-governor = "0.6.0"
rand = "0.8.5"
validator = { version = "0.18.1", features = ["derive"] }
dotenvy = "0.15.7"

# Logging
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-actix-web = "0.7.10"

[dev-dependencies]
cargo-audit = "0.19.0"