[package]
name = "erp_simfony"
version = "0.5.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-rt = "2"
hex = "0.4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1"
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2"
time = { version = "0.3", features = ["serde"] }

# Security & Config Dependencies
actix-session = { version = "0.10", features = ["cookie-session"] }
rustls = "0.23"
actix-csrf = "0.8"
base64 = { version = "0.22", features = ["std"] }

futures-util = "0.3"
rustls-pemfile = "1"
actix-governor = "0.8"
rand = "0.8"
validator = { version = "0.20", features = ["derive"] }
dotenvy = "0.15"

# Logging
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-actix-web = "0.7.10"
bcrypt = "0.17.0"
actix-http = "3.11.0"

# erp_simfony = { path = "../erp_simfony" }
[dev-dependencies]
cargo-audit = "0.21"
serde_json = "1.0"
scraper = "0.19.0"
